Criação Factories e ajustes nos Model e Controllers
